tests/baselines/reference/classAbstractConstructorAssignability.errors.txt
classAbstractConstructorAssignability.ts(7,5): error TS2322: Type 'typeof B' is not assignable to type 'typeof A'.
  Cannot assign an abstract constructor type to a non-abstract constructor type.
classAbstractConstructorAssignability.ts(9,5): error TS2322: Type 'typeof B' is not assignable to type 'typeof C'.
  Cannot assign an abstract constructor type to a non-abstract constructor type.
classAbstractConstructorAssignability.ts(12,1): error TS2511: Cannot create an instance of an abstract class.
classAbstractConstructorAssignability.ts(57,7): error TS2419: Types of construct signatures are incompatible.
  Type 'new () => SomeClass2' is not assignable to type 'abstract new () => AbstractClass2'.
    Property 'test' is missing in type 'SomeClass2' but required in type 'AbstractClass2'.


==== classAbstractConstructorAssignability.ts (4 errors) ====
    class A {}
    
    abstract class B extends A {}
    
    class C extends B {}
    
    var AA : typeof A = B;
        ~~
!!! error TS2322: Type 'typeof B' is not assignable to type 'typeof A'.
!!! error TS2322:   Cannot assign an abstract constructor type to a non-abstract constructor type.
    var BB : typeof B = A;
    var CC : typeof C = B;
        ~~
!!! error TS2322: Type 'typeof B' is not assignable to type 'typeof C'.
!!! error TS2322:   Cannot assign an abstract constructor type to a non-abstract constructor type.
    
    new AA;
    new BB;
    ~~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    new CC;
    
    // https://github.com/microsoft/TypeScript/issues/57412
    
    // private methods have parameters stripped away in the generated declaration files
    abstract class GeneratedConstructable {
      private constructor() {}
    }
    
    class MyPrivateClass {
      private privateVal: boolean;
      private constructor(
        public readonly foo: string,
        public readonly bar: string,
      ) {
        this.privateVal = true;
      }
    }
    
    export const funcThatAcceptsAnyGeneratedClass = (
      clazz: typeof GeneratedConstructable,
    ) => {};
    
    funcThatAcceptsAnyGeneratedClass(MyPrivateClass);
    
    abstract class AbstractClass1 {
      private constructor(arg: string) {}
    }
    
    class SomeClass1 {
      private constructor(arg: number) {}
    }
    
    const test1: typeof AbstractClass1 = SomeClass1;
    
    abstract class AbstractClass2 {
      private constructor() {}
      private test = 10;
    }
    
    class SomeClass2 {
      constructor() {}
    }
    
    const test2: typeof AbstractClass2 = SomeClass2;
          ~~~~~
!!! error TS2419: Types of construct signatures are incompatible.
!!! error TS2419:   Type 'new () => SomeClass2' is not assignable to type 'abstract new () => AbstractClass2'.
!!! error TS2419:     Property 'test' is missing in type 'SomeClass2' but required in type 'AbstractClass2'.
!!! related TS2728 classAbstractConstructorAssignability.ts:50:11: 'test' is declared here.
    